# ijma

./: README.md
build_system/: common.mak
build_system/confs/: ia32-glibc22-gcc29.mak  ia32-glibc23-gcc32.mak  ia32-glibc25-gcc41.mak  ia32-w32-msvc60.mak  ia32-w32-msvc80-64.env  ia32-w32-msvc80-64.mak  ia32-w32-msvc80.mak  ia32-w32-msvc90-64.mak  ia32-w32-msvc90.env  ia32-w32-msvc90.mak  ia64-glibc25-gcc41-32.mak  ia64-glibc25-gcc41.mak  ia64-glibc27-gcc41-32.mak  ia64-glibc27-gcc41.mak  ia64-w64-msvc80-32.env  ia64-w64-msvc80-32.mak  ia64-w64-msvc80.env  ia64-w64-msvc80.mak  parisc-hpux11-aCC337-64.mak  parisc-hpux11-aCC337.mak  sparc-solaris8-CC53.mak  sparc-solaris9-CC56-64.mak  sparc-solaris9-CC56.mak
db/ipadic/bin_utf8/: compound.def
db/ipadic/src/: Adj.csv  Adnominal.csv  Adverb.csv  Auxil.csv  Conjunction.csv  Filler.csv  Interjection.csv  Noun.adjv.csv  Noun.adverbal.csv  Noun.csv  Noun.demonst.csv  Noun.nai.csv  Noun.name.csv  Noun.org.csv  Noun.others.csv  Noun.proper.csv  Noun.unidic.csv  Noun.verbal.csv  Others.csv  Postp-col.csv  Postp.csv  Prefix.csv  Suffix.csv  Symbol.csv  char.def  dicrc  map-case.def  map-kana.def  map-width.def  pos-id.def  right-id.def  sent-sep.def  unk.def
docs/html/: analyzer_8cpp-source.html  analyzer_8cpp.html  analyzer_8cpp__incl.map  analyzer_8cpp__incl.md5  analyzer_8cpp_source.html  analyzer_8h-source.html  analyzer_8h.html  analyzer_8h__dep__incl.map  analyzer_8h__dep__incl.md5  analyzer_8h__incl.md5  analyzer_8h_source.html  annotated.html  changelog.html  changelog_8dox.html  char__property_8cpp-source.html  char__property_8cpp.html  char__property_8cpp__incl.map  char__property_8cpp__incl.md5  char__property_8h-source.html  char__property_8h.html  char__property_8h__dep__incl.map  char__property_8h__dep__incl.md5  char__property_8h__incl.map  char__property_8h__incl.md5  char__table_8cpp.html  char__table_8cpp__incl.map  char__table_8cpp__incl.md5  char__table_8cpp_source.html  char__table_8h.html  char__table_8h__dep__incl.map  char__table_8h__dep__incl.md5  char__table_8h__incl.map  char__table_8h__incl.md5  char__table_8h_source.html  classAnalyzerTest-members.html  classAnalyzerTest.html  classAnalyzerTest__coll__graph.map  classAnalyzerTest__coll__graph.md5  classAnalyzerThread-members.html  classAnalyzerThread.html  (+1075 more)
include/: analyzer.h  ijma.h  jma_factory.h  knowledge.h  sentence.h
include/ijma/: analyzer.h  knowledge.h  sentence.h
source/: CMakeLists.txt  Makefile
source/include/: changelog.dox  char_table.h  doxygen_mainpage.h  file_utils.h  generic_array.h  iconv_utils.h  jma_analyzer.h  jma_config.h.in  jma_ctype.h  jma_ctype_eucjp.h  jma_ctype_sjis.h  jma_ctype_utf8.h  jma_dictionary.h  jma_knowledge.h  jma_main.dox  kana_table.h  pos_table.h  scoped_ptr.h  strutil.h  tokenizer.h
source/libgtest/: CMakeLists.txt
source/libmecab/: CMakeLists.txt  common.h  iconv_utils.cpp  tagger.cpp
source/src/: CMakeLists.txt  Makefile  analyzer.cpp  char_table.cpp  iconv_utils.cpp  jma_analyzer.cpp  jma_ctype.cpp  jma_ctype_eucjp.cpp  jma_ctype_sjis.cpp  jma_ctype_utf8.cpp  jma_dictionary.cpp  jma_factory.cpp  jma_knowledge.cpp  kana_table.cpp  knowledge.cpp  pos_table.cpp  sentence.cpp  tokenizer.cpp  zwrapper.cpp
source/src/libiconv/: Makefile  iconv.c  localcharset.c  loop_wchar.h
source/src/libmecab/: ConfigureChecks.cmake  Makefile  context_id.cpp  dictionary.cpp  dictionary_compiler.cpp  dictionary_rewriter.cpp  mempool.h  mmap.h  param.cpp
source/src/libz/: Makefile  zwrapper.h
source/test/: CMakeLists.txt  test_csv_convert.cpp  test_encode_sysdict.cpp  test_gen_posid_def.cpp  test_jma_analyzer.cpp  test_jma_common.h  test_jma_compound.cpp  test_jma_convert_kana.cpp  test_jma_ctype.cpp  test_jma_encoding.cpp  test_jma_factory.cpp  test_jma_keyword_extraction.cpp  test_jma_knowledge.cpp  test_jma_multithread.cpp  test_jma_norm.cpp  test_jma_pos_nbest.cpp  test_jma_run.cpp  test_jma_split_sentence.cpp  test_jma_stopword.cpp  test_jma_userdic.cpp
source/test-web/: .gitignore  a.js  build.sh  build.xml  cp_war_to_161.sh  jmacomp.html
source/test-web/img/: jma_test.css
source/test-web/js/: ajax.js  custom.js  dom.js  string.js
source/test-web/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
source/test-web/nbproject/private/: private.properties  private.xml
source/test-web/src/java/jma/: ComparisonXmlUpdator.java  FreqUtil.java  JMACompareUtil.java  JMAException.java  JMAFileUploader.java  JMAParserServlet.java  JMAProcExec.java  JMAXmlServlet.java  StatisticManager.java  StatisticRecord.java
source/test-web/web/: a.js  admin.jsp  index.jsp  jmacomp.html  postable.htm
source/test-web/web/WEB-INF/: web.xml
source/test-web/web/img/: ff_spec.css  ie_spec.css  jma_test.css
source/test-web/web/js/: ajax.js  config.js  custom.js  dom.js  xml.js
source/test_src/: Makefile  test_csv_convert.cpp  test_gen_posid_def.cpp  test_jma_analyzer.cpp  test_jma_common.h  test_jma_compound.cpp  test_jma_encoding.cpp  test_jma_factory.cpp  test_jma_knowledge.cpp  test_jma_pos_nbest.cpp  test_jma_run.cpp  test_jma_stopword.cpp
source/test_web/src/java/jma/: ComparisonXmlUpdator.java  JMAAdminServlet.java  JMACompareUtil.java  JMAFileUploader.java  JMAParserServlet.java  JMAXmlServlet.java  StatisticRemoveServlet.java
source/test_web/web/: a.js  index.jsp  jmacomp.html  utf8_example.txt
source/test_web/web/img/: jma_test.css
source/test_web/web/js/: custom.js  xml.js
source/unit_test/: CMakeLists.txt  unittest_analyzer.cpp  unittest_jma_analyzer.cpp  unittest_jma_factory.cpp  unittest_jma_knowledge.cpp  unittest_knowledge.cpp  unittest_sentence.cpp
