link_directories(${PROJECT_SOURCE_DIR}/../lib)

add_executable(test_jma_knowledge test_jma_knowledge.cpp)
add_executable(test_jma_analyzer test_jma_analyzer.cpp)
add_executable(test_jma_factory test_jma_factory.cpp)
add_executable(test_jma_encoding test_jma_encoding.cpp)
add_executable(test_jma_ctype test_jma_ctype.cpp)
add_executable(jma_encode_sysdict test_encode_sysdict.cpp)
add_executable(jma_gen_posid_def test_gen_posid_def.cpp)
add_executable(jma_run test_jma_run.cpp)
add_executable(jma_multithread test_jma_multithread.cpp)
add_executable(jma_split_sentence test_jma_split_sentence.cpp)
add_executable(jma_pos_nbest test_jma_pos_nbest.cpp)
add_executable(jma_csv_convert test_csv_convert.cpp)
add_executable(test_jma_convert_kana test_jma_convert_kana.cpp)
add_executable(test_jma_norm test_jma_norm.cpp)
add_executable(test_jma_keyword_extraction test_jma_keyword_extraction.cpp)
add_executable(test_jma_compound test_jma_compound.cpp)
add_executable(test_jma_userdic test_jma_userdic.cpp)

target_link_libraries(test_jma_knowledge ${LIBS_JMA})
target_link_libraries(test_jma_analyzer ${LIBS_JMA})
target_link_libraries(test_jma_factory ${LIBS_JMA})
target_link_libraries(test_jma_encoding ${LIBS_JMA})
target_link_libraries(test_jma_ctype ${LIBS_JMA})
target_link_libraries(jma_encode_sysdict ${LIBS_JMA})
target_link_libraries(jma_run ${LIBS_JMA})
target_link_libraries(jma_multithread ${LIBS_JMA})
target_link_libraries(jma_split_sentence ${LIBS_JMA})
target_link_libraries(jma_pos_nbest ${LIBS_JMA})
target_link_libraries(jma_csv_convert ${LIBS_JMA})
target_link_libraries(test_jma_convert_kana ${LIBS_JMA})
target_link_libraries(test_jma_norm ${LIBS_JMA})
target_link_libraries(test_jma_keyword_extraction ${LIBS_JMA})
target_link_libraries(test_jma_compound ${LIBS_JMA})
target_link_libraries(test_jma_userdic ${LIBS_JMA})
